Got things aligned correctly

--- a/src/Components/About/About.css
+++ b/src/Components/About/About.css
@@ -5,8 +5,8 @@
     height: 200vh;
     width: 100%;
     display: flex;
-    /* justify-content: center; */
     flex-direction: column;
+    align-items: center;
     color: var(--text-primary);
     background-color: var(--text-secondary);
 }
@@ -57,9 +57,8 @@ a.anchor:hover {
 }
 .follow img {
     height: 500px;
-    display: block;
-    margin-left: 20rem;
-    margin-right: auto;
+    display: flex;
+    align-items: center;
 }
 .about-container h1 {
     color: var(--text-primary);
@@ -70,29 +69,15 @@ a.anchor:hover {
 
     color: black;
     width: 100%;
-    text-align: center;
+    display: flex;
+    align-items: center;
+    margin: 0;
+    flex-direction: column;
+}
+.about {
+    margin: 0 20px;
 }
 
-/* @media only screen and (max-width: 320px) {
-    .about-container h1 {
-        border: solid;
-        display: block;
-        padding-left: 10rem;
-        width: 100%;
-    }
-    .about-container h2 {
-        border: solid;
-        display: block;
-        box-sizing: border-box;
-        width: 100%;
-        text-align: center;
-        font-size: 35px;
-        /* display: block;
-        margin-right: 0rem;
-        margin-left: 0rem;
-        padding-left: 10rem; */
-    /* }
-} */ 
 @media only screen and (max-width: 820px) {
     .about-container h2 {
         margin: 0;
@@ -106,8 +91,6 @@ a.anchor:hover {
         margin-top: 90px;
     }
     body {
-        /* width: 100%; */
-        /* min-width: */
         margin: 0;
     }
     .follow img {
@@ -154,7 +137,7 @@ a.anchor:hover {
     }
     .follow img {
         margin: 0;
-        width: 40%;
+        width: 70%;
         height: auto;
     }
     .follow {
@@ -185,3 +168,4 @@ a.anchor:hover {
     color: var(--text-secondary);
 
 }
+
